# silantreaux

./: BUILD.bazel  README.md  WORKSPACE  angular.tsconfig.json  index.html  package.json  tsconfig.json
synapse/: tsconfig.json
synapse/demo-ui/: BUILD.bazel  app.ts  main.ts  tsconfig.json
synapse/demo-ui/hello-world/: BUILD.bazel  hello-world.component.ts
synapse/jinjar/: BUILD.bazel  main.ts
synapse/jinjar/hello-world/: BUILD.bazel  hello-world.component.scss
synapse/jinjur/: BUILD.bazel  main.ts
synapse/jinjur/hello-world/: hello-world.component.scss  hello-world.component.spec.ts  hello-world.component.ts
synapse/papreekuh/: BUILD
synapse/papreekuh/papreekuh/: main.py
synapse/papreekuh/tests/: run_tests.py
synapse/sui/styles/: _fonts.scss
tools/: bazel.rc
