package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

sass_binary(
    name = "hello-world-styles",
    src = "hello-world.component.scss",
    deps = [
         "//synapse/sui/styles:colors",
         "//synapse/sui/styles:fonts",
    ],
)

ng_module(
  name = "hello-world",
  srcs = glob(["*.ts"], exclude = ["*.spec.ts*"]),
  deps = [ ],
  assets = [":hello-world-styles"],
  tsconfig = "//:tsconfig.json",
)

ts_library(
  name = "hello-world-unit-test-lib",
  srcs = [
    "hello-world.component.spec.ts",
  ],
  tsconfig = "//:tsconfig.json",
  deps = [ ],
)

jasmine_node_test(
  name = "hello-world-unit-test",
  srcs = [":hello-world-unit-test-lib"],
)
